src/objects/Music_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <label>Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Music Comments</label>
    <nameField>
        <label>Music Comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music Comment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>